[package]
name = "rust-pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cws-rengines = {git="https://github.com/Alex1um/cws-rengines", branch="ids_rewwrite"}
#cws-rengines = {path="../cws-rengines"}
